# drawtool

./: .gitignore  README.md  pyproject.toml
docs/: api-reference.md  examples.md  getting-started.md
examples/: example_config.json  make_example.py
specs/: base_renderer.md  config-schema.md  config_schema.md
src/drawtool/: __init__.py  defaults.py  init.py  renderer.py  types.py
